fix: align cms toc depth with heading level

--- a/src/editor.css
+++ b/src/editor.css
@@ -265,15 +265,19 @@
 }
 
 .editor-toc-depth-1 {
-  padding-left: 14px;
+  font-size: 14px;
 }
 
 .editor-toc-depth-2 {
-  padding-left: 28px;
+  font-size: 13px;
 }
 
 .editor-toc-depth-3 {
-  padding-left: 42px;
+  font-size: 13px;
+}
+
+.editor-toc-depth-4 {
+  font-size: 13px;
 }
 
 .editor-toc-link {
